refactor: 카카오 맵 관련 코드 리팩토링